# GL_Clock

./: CMakeLists.txt  README.md  main.cpp
src/Color/: Color.cpp
src/geometry/: SevenSegmentDisplay.h  Shapes.cpp  Shapes.h
src/shapes/: Circle.cpp  Circle.h  SevenSegmentDisplay.cpp  SevenSegmentDisplay.h  TickMark.cpp  TickMark.h
src/time/: Clock.cpp  Clock.h  Timer.cpp  Timer.h
src/window/: ClockWindow.cpp  ClockWindow.h
